# tkc-lvlab-py

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Lvlab.yml  README.md  TODO.md  WIP.md  justfile  mkdocs.yml  pyproject.toml  requirements.txt  sonar-project.properties
.claude/skills/refresh-cloud-images/: SKILL.md
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/release-notes/: 0.3.0.md  0.4.0.md  0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md  0.6.0.md  README.md  _template.md
.github/workflows/: build-release.yml  deploy-docs.yml  pre-commit.yml  test.yml
docs/: CONTRIBUTING.md  Design.md  Libvirt.md  Lvlab.example.yml  SnapshotsWork.md  WIP.md  Walkthrough.md  Why.md  cloud-init-examples.md  example-manifest.md  index.md  libvirt-notes.md  lvscripts-survey.md  one-off-vms.md  releases.md  walkthrough.md  why.md
docs-extra/: CONTRIBUTING.md  Libvirt.md  Lvlab.example.yml  Walkthrough.md  host-validation.md  lvscripts-survey.md  releases.md
docs-extra/smoke/: Lvlab.yml  README.md  run-smoke.sh
docs/api/: cli.md  config.md  index.md  logging.md
docs/api/scripts/: createvm.md  deletevm.md  destroyvm.md
docs/api/utils/: catalog.md  cloud_init.md  images.md  libvirt.md  network.md  output.md  passwords.md  requirements.md  snapshot_cleanup.md  ssh_keys.md  standalone_cloud_init.md  vdisk.md  virsh.md
docs/cloud-init.examples/: meta-data  network-config  network-config.v1  network-config.v2  user-data
scripts/: host-bootstrap.sh  hostcheck.sh  run-validation.sh
scripts/validate/: README.md  __init__.py  __main__.py  context.py  model.py  pool.py  predicates.py  registry.py  report.py  runner.py  safety.py  scenarios.py  scheduler.py
src/tkc_lvlab/: __init__.py  _logging.py  cli.py  config.py  exceptions.py  footprints.py  smoke.py
src/tkc_lvlab/scripts/: __init__.py  createvm.py  deletevm.py  destroyvm.py
src/tkc_lvlab/templates/: hosts.j2  network-config.v1.j2  network-config.v2.j2  user-data.j2
src/tkc_lvlab/utils/: catalog.py  cloud_init.py  images.py  libvirt.py  network.py  osinfo.py  output.py  passwords.py  requirements.py  snapshot_cleanup.py  ssh_keys.py  standalone_cloud_init.py  subprocess_env.py  vdisk.py  virsh.py
tests/: conftest.py  integration_helpers.py  lint_test_safety.py  test_catalog.py  test_cli_capabilities.py  test_cli_cloudinit_stdout.py  test_cli_destroy.py  test_cli_global.py  test_cli_global_flags.py  test_cli_hosts.py  test_cli_init.py  test_cli_smoke_list.py  test_cli_snapshot_list.py  test_cli_snapshots.py  test_cli_ssh.py  test_cli_ssh_config.py  test_cli_status.py  test_cli_up.py  test_cli_up_all.py  test_cloud_init_network_config.py  test_cloud_init_ssh_key.py  test_cloud_init_user_data.py  test_config_parse.py  test_conftest_safety.py  test_createvm.py  test_deletevm.py  test_destroyvm.py  test_dhcp_narrowing.py  test_footprints.py  test_images_basedir.py  test_images_checksum.py  test_images_clean.py  test_images_download.py  test_integration_createvm.py  test_integration_lvlab.py  test_integration_regression_guard.py  test_integration_snapshot.py  test_libvirt_cloud_init.py  test_libvirt_lifecycle.py  test_libvirt_machine.py  (+17 more)
tkc_lvlab/: cli.py  config.py  logging.py
tkc_lvlab/scripts/: __init__.py  createvm.py  destroyvm.py
tkc_lvlab/templates/: hosts.j2  meta-data.j2  network-config.v1.j2  network-config.v2.j2  user-data.j2  user-data.oneoff.j2
tkc_lvlab/utils/: cloud_init.py  images.py  libvirt.py  requirements.py  ssh_keys.py  standalone_cloud_init.py  vdisk.py
