[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[project]
name = "tkc-lvlab"
version = "0.2.4"
description = "The Libvirt Labs project provides the `lvlab` Python application which can be used to manage Libvirt based development environments in a familiar way."
authors = [
    {name = "Chris Row", email = "1418370+memblin@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "requests>=2.33",
    "libvirt-python>=10.5",
    "python-gnupg>=0.5",
    "jinja2>=3.1.6",
    "pycdlib>=1.14",
]

[project.scripts]
lvlab = "tkc_lvlab.cli:run"

[tool.uv.build-backend]
module-root = ""
module-name = "tkc_lvlab"

[dependency-groups]
dev = [
    "pysonar",
    "pytest>=8",
    "pytest-cov>=5",
]
