[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[project]
name = "tkc-lvlab"
version = "0.2.4"
description = "The Libvirt Labs project provides the `lvlab` Python application which can be used to manage Libvirt based development environments in a familiar way."
authors = [
    {name = "Chris Row", email = "1418370+memblin@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "requests>=2.33",
    "python-gnupg>=0.5",
    "jinja2>=3.1.6",
    "pycdlib>=1.14",
]

[project.scripts]
lvlab = "tkc_lvlab.cli:run"
createvm = "tkc_lvlab.scripts.createvm:run"
destroyvm = "tkc_lvlab.scripts.destroyvm:run"

[tool.uv.build-backend]
module-root = "src"
module-name = "tkc_lvlab"

[dependency-groups]
dev = [
    "pysonar",
    "pytest>=8",
    "pytest-cov>=5",
    "mkdocstrings[python]>=1.0.4",
    "mdformat>=0.7",
    "mdformat-mkdocs>=4.0",
    "mdformat-gfm>=0.4",
    "zensical>=0.0.43",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tkc_lvlab --cov-report=xml --cov-report=term"
markers = [
    "integration: test exercises real virsh/qemu-img/libvirt; gated by LVLAB_INTEGRATION=1 (default: skipped).",
]

[tool.coverage.run]
source = ["tkc_lvlab"]
branch = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
show_missing = true
