[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "tkc-lvlab"
dynamic = ["version"]
description = "The Libvirt Labs project provides the `lvlab` Python application which can be used to manage Libvirt based development environments in a familiar way."
authors = [
    {name = "Chris Row", email = "1418370+memblin@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "requests>=2.33",
    "python-gnupg>=0.5",
    "jinja2>=3.1.6",
    "pycdlib>=1.14",
    "rich>=13",
]

[project.scripts]
lvlab = "tkc_lvlab.cli:run"
createvm = "tkc_lvlab.scripts.createvm:run"
deletevm = "tkc_lvlab.scripts.deletevm:run"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
# This repo's tags are unprefixed (0.3.0, not v0.3.0); dunamai's default
# pattern expects a "v" prefix and would otherwise match no tag.
pattern = "default-unprefixed"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/tkc_lvlab"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[dependency-groups]
dev = [
    "pysonar",
    "pytest>=8",
    "pytest-cov>=5",
    "mkdocstrings[python]>=1.0.4",
    "zensical>=0.0.43",
    # Linters/formatters also wired into pre-commit; pinned here so
    # `uv run black` / `uv run pylint` match the hook behavior locally
    # (black version tracks .pre-commit-config.yaml; pylint reads .pylintrc).
    # black >=26.3.1 also clears GHSA cache-filename arbitrary-write (#28).
    "black==26.3.1",
    "pylint>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put ``scripts/`` on sys.path so the validation harness (``scripts/validate``,
# a dev-only tool, not shipped in the wheel) is importable as ``validate.*``
# from its unit tests in ``tests/``.
pythonpath = ["scripts"]
# Coverage flags are intentionally NOT in addopts. pytest-cov's
# default collector doesn't follow subprocess.run-spawned children,
# so enabling --cov for the integration suite produces a misleading
# "No data was collected" warning and clobbers any prior unit-test
# coverage.xml. Opt in to coverage where it makes sense:
#   - CI test workflow: passes --cov flags explicitly on the unit run.
#   - Local dev: ``uv run pytest --cov=tkc_lvlab --cov-report=term``.
#   - Integration: no coverage at all (behavior gate, not coverage source).
markers = [
    "integration: test exercises real virsh/qemu-img/libvirt; gated by LVLAB_INTEGRATION=1 (default: skipped).",
]

[tool.coverage.run]
source = ["tkc_lvlab"]
branch = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.report]
show_missing = true
